# myproject_nutrition_fact_frontend

./: Dockerfile  docker-compose.yml  memo.txt  pyproject.toml
api/: main.py
backend/: Dockerfile  poetry_installation.exp
backend/api/: crud.py  db.py  main.py  setting.py  test.py  user.py
backend/api/crud/: nutritionFact.py  user.py
backend/api/models/: nutritionFact.py  post.py  user.py
backend/api/routers/: nutritionFact.py
backend/api/schemas/: nutritionFact.py  user.py
backend/create_table/: columns_text.txt  create_nutrition_fact_db.py  extract_columns.py  main.py
backend/create_table/csv/: db_data.csv
backend/create_table/text/: sample.csv
db_mysql/: Dockerfile  my.cnf
db_mysql/init_sql/: 1_init.sql
db_mysql/sql/: init.sql
frontend/: Dockerfile  package.json
frontend/src/: App.jsx  App.test.tsx  App.tsx  FoodList.tsx  Test.tsx  index.js  index.tsx  test.jsx
frontend/src/components/: App.tsx
frontend/src/components/api/: postFoodList.tsx
frontend/src/components/functional/states/: addStates.tsx
frontend/src/components/page/: App.tsx
frontend/src/components/page/foodList/: foodList.tsx  modules.tsx  postsForm.tsx  providers.tsx
frontend/src/foodlist/: FoodList.tsx  FoodListType.tsx
frontend/src/test/: App.test.tsx  postFoodList.test.tsx
frontend/src/types/: foodListType.tsx
nginx/: Dockerfile
nginx/conf/: default.conf
nginx/src/: index.html
old/: old_main.py
test/: Dockerfile  poetry_installation.exp
