[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["kakeru suzuki <kakeruuuuuu0114＠gmail.com>"]

[tool.poetry.dependencies]
python  "^3.9"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], versions = "^0.17.6"}
SQLAlchemy = "^1.4.35"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]